--- a/articles.html
+++ b/articles.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="assets/style/style.css">
    
-    <title> موقع ابداع تك للبرمجيات </title>
+    <title> المقالات </title>
   </head>
   <body >
 
@@ -40,9 +40,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="last-page.html">تحديثات ويندوز 7 </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+            
           </ul>
         </div>
       </nav>
@@ -58,7 +56,7 @@
               </div>
                 <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
               <div>
-                 <button class="btn-small">اقرأ الان</button>
+                 <button class="btn btn-small">اقرأ الان</button>
                  <label style="margin-right: 50%;">200 
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
@@ -76,7 +74,7 @@
               </div>
                 <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
               <div>
-                 <button class="btn-small">اقرأ الان</button>
+                 <button class="btn btn-small">اقرأ الان</button>
                  <label style="margin-right: 50%;">200 
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
@@ -94,7 +92,7 @@
               </div>
                 <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
               <div>
-                 <button class="btn-small">اقرأ الان</button>
+                 <button class="btn btn-small">اقرأ الان</button>
                  <label style="margin-right: 50%;">200 
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
@@ -112,7 +110,7 @@
               </div>
                 <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
               <div>
-                 <button class="btn-small">اقرأ الان</button>
+                 <button class="btn btn-small">اقرأ الان</button>
                  <label style="margin-right: 50%;">200 
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
@@ -130,7 +128,7 @@
                  </div>
                    <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
                  <div>
-                    <button class="btn-small">اقرأ الان</button>
+                    <button class="btn btn-small">اقرأ الان</button>
                     <label style="margin-right: 50%;">200 
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
@@ -148,7 +146,7 @@
                  </div>
                    <h5 class="card-body work-text text-center">توقف دعم التطبيقات جهاز Microsoft شركة لتتبع اللياقة البدنية Microsoft Brand</h5>
                  <div>
-                    <button class="btn-small">اقرأ الان</button>
+                    <button class="btn btn-small">اقرأ الان</button>
                     <label style="margin-right: 50%;">200 
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
